--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
    <head>
       <meta charset="UTF-8" />
       <link rel="icon" href="/favicon.ico" />
+      <link rel="apple-touch-icon" sizes="180x180" href="/meeple-robot-180.png" />
+      <link rel="icon" href="/meeple-robot-180.png" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Board Game Sidekick</title>
    </head>
